# iaerp

./: .gitignore  .secrets.baseline  AGENTS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  COORDINACION_IA.md  ISSUE_TRACKING.md  QUICK_START.md  README.md  SPRINT_STATUS.md  compose.coolify.yaml  compose.yaml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  health.py  initial_data.py  main.py
backend/app/api/: __init__.py  crm.py  router.py
backend/app/core/: auth.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: check_ci_services.py  generate_test_certificate.py  validate_migrations.py  validate_oidc_runtime.py
backend/tests/: conftest.py  test_access_key.py  test_auth_context.py  test_billing_api.py  test_billing_credit_note.py  test_collection_scheduler.py  test_config.py  test_crm_features.py  test_fiscal_policy.py  test_fiscal_settings_api.py  test_health.py  test_initial_data.py  test_invoice_artifacts_api.py  test_invoice_issue_flow.py  test_mcp.py  test_mcp_invoices.py  test_mcp_prompt_injection.py  test_mcp_receivables.py  test_outbox.py  test_platform_api.py  test_receivables_aging.py  test_receivables_flow.py  test_receivables_payment_service.py  test_receivables_payments_api.py  test_receivables_reversal.py  test_receivables_service.py  test_ride.py  test_service_account_poc.py  test_signing.py  test_sri_simulator.py  test_sri_simulator_router.py  test_sri_soap_client.py  test_sri_xml.py  test_storage.py  test_storage_config.py  test_tasks_dispatch.py  test_tenant_switch_poc.py
(+194 files in other folders)
