[project]
name = "iaerp-backend"
version = "0.1.0"
description = "IAERP modular backend and MCP server"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.21,<1",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "celery>=5.4,<6",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "mcp>=1.27,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyjwt[crypto]>=2.10,<3",
    "redis>=5.2,<6",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
